--- a/style.css
+++ b/style.css
@@ -1,88 +1,59 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-a:hover {
-    color: #2074a0;
-}
-
-.boxes{
-    margin-top: 60px;
-    margin-bottom: 30px;
-    display: flex;
-    flex-direction: row;
-}
-
-#box1{
-    margin-right: 200px;
-    background-color: cadetblue;
-    border: 5px solid black;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-#box2{
-    background-color: cadetblue;
-    border: 5px solid black;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-#titulo_tabela{
+td {
+    text-align: center;
+    width: 120px;
+  }
+  
+  
+  #titulo_tabela {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-/* #nomes_colunas{
+  }
+  
+  #nomes_colunas {
     border: 1px solid;
-}
-
-#tabela{
+  }
+  
+  #tabela {
     align-items: center;
     padding: 10px;
-}
-
-#titulo{
+    color: white;
+  }
+  
+  #titulo {
     font-weight: bold;
     font-size: 24px;
     margin-top: 70px;
-}
-
-#tabelaBody{
+    color: white;
+  }
+  
+  #tabelaBody {
     margin: 20px;
-} */
+  }
 
-
-/* Estilo para toda a tabela */
-table {
-    width: 100%;
+  /* Estilizando a tabela */
+#resultado1 table {
     border-collapse: collapse;
-    margin-bottom: 20px;
-    font-family: 'Arial', sans-serif;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    margin-top: 20px;
 }
 
-/* Estilo para as células de cabeçalho da tabela */
-th {
-    background-color: #f8f8f8;
-    font-weight: bold;
-    color: #333;
-    border: 1px solid #e1e1e1;
-    padding: 12px;
-    text-align: left;
+#resultado1 th, #resultado1 td {
+    border: 1px solid white;
+    padding: 8px;
+    text-align: center;
 }
 
-/* Estilo para as células de dados da tabela */
-#teste {
-    padding: 12px;
-    border: 1px solid #e1e1e1;
-    background-color: red;
+/* Estilizando a tabela de amortização */
+#resultado2 table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 20px;
 }
 
-/* Estilo para linhas ímpares da tabela */
-#row:nth-child(odd) {
-    background-color: #b1a6a6;
+#resultado2 th, #resultado2 td {
+    border: 1px solid white;
+    padding: 8px;
+    text-align: center;
 }
